Containerizing project with Jib